--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quizzes Online</title>
 </head>
+
 <body>
     <h1>aaron</h1>
     <h6>vai tmnc chelsea</h6>
+    <p>Paragrafo</p>
+        
+ <img scr="" alt=""
 </body>
+
 </html>
