--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <!-- liverpool é o maior da inglaterra -->
-    <h1>aaron</h1>
+    <h1>aron</h1>
     <h6>vai tmnc chelsea</h6>
     <p>Paragrafo</p>
     <img src="./transferir (5).jfif" alt="">
