--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h6>Que tipo de emo você é descubra aqui</h6>
     <p>O que é um emo??</p>
     <p>Consideram-se pessoas altamente emotivas e sensíveis às letras das músicas de sua preferência, as quais têm como temática a melancolia, a tristeza, problemas que envolvem a temática do amor, da rejeição do outro (como da própria família).</p>
-    <img src="./transferir (5).jfif" alt="">
+    <img src="./aiaiai.jpg" alt="">
 </body>
 
 
