--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <h3>Que tipo de emo você é descubra aqui</h3>
     <p>O que é um emo??</p>
     <p>Consideram-se pessoas altamente emotivas e sensíveis às letras das músicas de sua preferência, as quais têm como temática a melancolia, a tristeza, problemas que envolvem a temática do amor, da rejeição do outro (como da própria família).</p>
-    <img src="./aiaiai.jpg" alt=""style="
-    width=""
+    <img src="./aiaiai.jpg" alt="shrek emo"
+    style="
+    width=50%;
     ">
 </body>
 
