--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <!-- liverpool é o maior da inglaterra -->
-    <h1>MILAN>>>>>>liverpool</h1>
+    <h1>EmoQuizBrasil</h1>
     <h3>Que tipo de emo você é descubra aqui</h3>
     <p>O que é um emo??</p>
     <p>Consideram-se pessoas altamente emotivas e sensíveis às letras das músicas de sua preferência, as quais têm como temática a melancolia, a tristeza, problemas que envolvem a temática do amor, da rejeição do outro (como da própria família).</p>
