--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- liverpool é o maior da inglaterra -->
     <h1>EmoQuizBrasil</h1>
     <h3>Que tipo de emo você é descubra aqui</h3>
-    <p>O que é um emo??</p>
+    <p>O que é um emo??</p><source sizes="28" srcset="28" type="image/">
     <p>Consideram-se pessoas altamente emotivas e sensíveis às letras das músicas de sua preferência, as quais têm como temática a melancolia, a tristeza, problemas que envolvem a temática do amor, da rejeição do outro (como da própria família).</p>
     <img src="./aiaiai.jpg" alt="shrek emo"
     style="
