--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
 </head>
 
 <body>
+<header>
+<h1>Quizzes Brasil</h1>
+
+</header>
+
+
     <!-- liverpool é o maior da inglaterra -->
     <h1>EmoQuizBrasil</h1>
     <h3>Que tipo de emo você é descubra aqui</h3>
-    <p>O que é um emo??</p><source sizes="28" srcset="28" type="image/">
+    <p>O que é um emo??</p>
     <p>Consideram-se pessoas altamente emotivas e sensíveis às letras das músicas de sua preferência, as quais têm como temática a melancolia, a tristeza, problemas que envolvem a temática do amor, da rejeição do outro (como da própria família).</p>
     <img src="./aiaiai.jpg" alt="shrek emo"
     style="
