--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-<header>
+    <header style="
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+">
 <h1>Quizzes Brasil</h1>
 
 </header>
