--- a/index.html
+++ b/index.html
@@ -20,10 +20,14 @@
 
 
     <!-- liverpool é o maior da inglaterra -->
-    <h1>EmoQuizBrasil</h1>
+    <h1 style="
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    ">EmoQuizBrasil</h1>
     <img src="./aiaiai.jpg" alt="shrek emo"
     style="
-    width: 80%;
+    width: 120%;
     ">
 </body>
     <h3>Que tipo de emo você é descubra aqui</h3>
