--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     align-items: center;
     justify-content: space-around;
     ">EmoQuizBrasil</h1>
-    <img src="./aiaiai.jpg" alt="shrek emo"
+    <img src="./aiaiai2.jpg" alt="shrek emo"
     style="
     width: 90%;
     ">
