--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     ">EmoQuizBrasil</h1>
     <img src="./aiaiai2.jpg" alt="shrek emo"
     style="
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+">
     width: 30%;
     ">
 </body>
