--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <section>
     <h2>Descubra Aqui</h2>
     <p>Fundação e título nacionais e internacionais. É, sem dúvida, um dos mais históricos clubes ingleses. Fundado em 1892 pela revolta de John Houlding, depois do Everton recusar-se a pagar o aumento da renda de Anfield (até então propriedade de John), o Liverpool é um dos mais titulados em Inglaterra</p>
-    <img src=""
+    <img src="./"
 </section>
 
 </html>
