--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     <p>Consideram-se pessoas altamente emotivas e sensíveis às letras das músicas de sua preferência, as quais têm como temática a melancolia, a tristeza, problemas que envolvem a temática do amor, da rejeição do outro (como da própria família).</p>
 </body>
 <section>
-    <h2>Descubra Aqui</h2>
-    <p>Fundação e título nacionais e internacionais. É, sem dúvida, um dos mais históricos clubes ingleses. Fundado em 1892 pela revolta de John Houlding, depois do Everton recusar-se a pagar o aumento da renda de Anfield (até então propriedade de John), o Liverpool é um dos mais titulados em Inglaterra</p>
-    <img src="./"
-</section>
+    <div> <h2>Descubra Aqui</h2>
+        <p>Fundação e título nacionais e internacionais. É, sem dúvida, um dos mais históricos clubes ingleses. Fundado em 1892 pela revolta de John Houlding, depois do Everton recusar-se a pagar o aumento da renda de Anfield (até então propriedade de John), o Liverpool é um dos mais titulados em Inglaterra</p></div>
+    <img src="./aiaiai2.jpg"
+<section>
 
 </html>
