--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
     <div> <h2>Descubra Aqui</h2>
         <p>Fundação e título nacionais e internacionais. É, sem dúvida, um dos mais históricos clubes ingleses. Fundado em 1892 pela revolta de John Houlding, depois do Everton recusar-se a pagar o aumento da renda de Anfield (até então propriedade de John), o Liverpool é um dos mais titulados em Inglaterra</p></div>
     <img src="./aiaiai2.jpg"
-<section>
+    </section>
 
 </html>
