--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     <img src="./aiaiai2.jpg" alt="shrek emo"
     style="
     width: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
     ">
 </body>
     <h3>Que tipo de emo você é descubra aqui</h3>
