--- a/index.html
+++ b/index.html
@@ -20,11 +20,7 @@
 
 
     <!-- liverpool é o maior da inglaterra -->
-    <h1 style="
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    ">EmoQuizBrasil</h1>
+    <h1 style=" display: flex; align-items: center; justify-content: space-around;">EmoQuizBrasil</h1>
     <img src="./aiaiai2.jpg" alt="shrek emo"
     style="
     width: 30%;
