--- a/index.html
+++ b/index.html
@@ -9,21 +9,17 @@
 </head>
 
 <body>
-    <header style="
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-">
+    <header>
 <h1>Quizzes Brasil</h1>
 
 </header>
 
 
     <!-- liverpool é o maior da inglaterra -->
-    <h1 style=" display: flex; align-items: center; justify-content: space-around;">EmoQuizBrasil</h1>
+    <h1>EmoQuizBrasil</h1>
     <img src="./aiaiai2.jpg" alt="shrek emo"
     style="
-    width: 30%;
+    width: 20%;
     ">
 </body>
     <h3>Que tipo de emo você é descubra aqui</h3>
