--- a/index.html
+++ b/index.html
@@ -38,9 +38,24 @@
 </html>
 
 </body>
-</h2> Conheça nossa equipe
+</h2>Conheça nossa equipe:
+<div class="ft-integrantes">
+</div>
+ <img class="ft-integrantes"
+ <h3> Aaron</h3>
+ </div>
 
-<div
+</div>
+<img class="ft-integrantes"
+<h3> João</h3>
+</div>
+
+</div>
+<img class="ft-integrantes"
+<h3> Barbosa</h3>
+</div>
+
+
 
 
 
