--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
 </h2>Conheça nossa equipe:
 <div class="ft-integrantes">
 </div>
- <img class="ft-integrantes"
+ <img class="ft-integrantes" src="./aaaaaaaa.jfif"
  <h3> Aaron</h3>
  </div>
 
 </div>
-<img class="ft-integrantes"
+<img class="ft-integrantes" src="./aaaaaaaa.jfif"
 <h3> João</h3>
 </div>
 
 </div>
-<img class="ft-integrantes"
+<img class="ft-integrantes" src="./aaaaaaaa.jfif"
 <h3> Barbosa</h3>
 </div>
 
