--- a/index.html
+++ b/index.html
@@ -41,18 +41,28 @@
 </h2>Conheça nossa equipe:
 <div class="ft-integrantes">
 </div>
- <img class="ft-integrantes" src="./Aaron emo.jfif"
- <h3> Aaron</h3>
- </div>
+<section class="equipe">
 
-</div>
-<img class="ft-integrantes" src="./João emo.jfif"
-<h3> João</h3>
-</div>
+    <div class="Fotos">
 
-</div>
-<img class="ft-integrantes" src="./Barbosa emo.jfif"
-<h3> Barbosa</h3>
+     <div>
+        <img class="ft-integrantes" src="./Aaron emo.jfif"
+        <h3> Aaron</h3>
+        <h3> Fundador </h3>
+    </div>
+
+    <div>
+        <img class="ft-integrantes" src="./João emo.jfif"
+ <h3> João</h3>
+        <h3> Fundador </h3>
+    </div>  
+
+    <div>
+        <img class="ft-integrantes" src="./Barbosa emo.jfif"
+        <h3> Barbosa</h3>
+        <h3> Fundador </h3>
+    </div>
+
 </div>
 
 
