--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
     <div class="Fotos">
 
      <div>
-        <img class="ft-integrantes" src="./Aaron emo.jfif"
-        <h3> Aaron</h3>
+        <img class="ft-integrantes" src="./Aaron emo.jfif">
+       <h3>Aaron</h3>
         <h3> Fundador </h3>
     </div>
 
     <div>
-        <img class="ft-integrantes" src="./João emo.jfif"
- <h3> João</h3>
+        <img class="ft-integrantes" src="./João emo.jfif">
+        <h3> João</h3>
         <h3> Fundador </h3>
     </div>  
 
     <div>
-        <img class="ft-integrantes" src="./Barbosa emo.jfif"
+        <img class="ft-integrantes" src="./Barbosa emo.jfif">
         <h3> Barbosa</h3>
         <h3> Fundador </h3>
     </div>
