--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <header>
 <h1>Quizzes Brasil</h1>
 <h2>EmoQuizBrasil</h2>
+
+<p> <a href="equipe">Equipe</a></p>
 </header>
 
 
@@ -31,7 +33,7 @@
         <p>Fundação e título nacionais e internacionais. É, sem dúvida, um dos mais históricos clubes ingleses. Fundado em 1892 pela revolta de John Houlding, depois do Everton recusar-se a pagar o aumento da renda de Anfield (até então propriedade de John), o Liverpool é um dos mais titulados em Inglaterra</p></div>
     <img class="img-intro" src="./aiaiai2.jpg" style="border-radius: 0 20px 20px 0;">
 
-
+<section class=" equipe>"
      
     </section>
 
