--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
     <div> <h2>Descubra Aqui</h2>
         <p>Fundação e título nacionais e internacionais. É, sem dúvida, um dos mais históricos clubes ingleses. Fundado em 1892 pela revolta de John Houlding, depois do Everton recusar-se a pagar o aumento da renda de Anfield (até então propriedade de John), o Liverpool é um dos mais titulados em Inglaterra</p></div>
     <img class="img-intro" src="./aiaiai2.jpg" style="border-radius: 0 20px 20px 0;">
-
-<section class=" equipe>"
      
     </section>
 
 </html>
 
 </body>
+
+<section class="equipe">
 </h2>Conheça nossa equipe:
 <div class="ft-integrantes">
 </div>
@@ -64,6 +64,9 @@
         <h3> Barbosa</h3>
         <h3> Fundador </h3>
     </div>
+    </div>
+</section>
+
 
 </div>
 
