--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 </body>
 
 <section class="equipe">
-</h2>Conheça nossa equipe:
+</h2>
+
+<h2>Conheça nossa equipe:</h2>
 <div class="ft-integrantes">
 </div>
 
