--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </body>
 <section id="intro"> 
     <div> <h2>Descubra Aqui</h2>
-        <p>Fundação e título nacionais e internacionais. É, sem dúvida, um dos mais históricos clubes ingleses. Fundado em 1892 pela revolta de John Houlding, depois do Everton recusar-se a pagar o aumento da renda de Anfield (até então propriedade de John), o Liverpool é um dos mais titulados em Inglaterra</p></div>
+        <p>Se voce é um emo triste, um emo solitario ou um emo shrek</p></div>
     <img class="img-intro" src="./aiaiai2.jpg" style="border-radius: 0 20px 20px 0;">
      
     </section>
