--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     <!-- liverpool é o maior da inglaterra -->
     
     <img src="./aiaiai2.jpg" alt="shrek emo"
-    style:
-    width: 20%>
+    style="width: 30%;">
 </body>
     <h3>Que tipo de emo você é descubra aqui</h3>
     <p>O que é um emo??</p>
