--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     style="width: 30%;">
 </body>
     <h3>Que tipo de emo você é descubra aqui</h3>
-    <p>O que é um emo??</p>
+    <h4>O que é um emo??</h4>
     <p>Consideram-se pessoas altamente emotivas e sensíveis às letras das músicas de sua preferência, as quais têm como temática a melancolia, a tristeza, problemas que envolvem a temática do amor, da rejeição do outro (como da própria família).</p>
 </body>
 <section id="intro"> 
