--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quizzes Online</title>
+    <title>REINO DAS ENGRENAGENS SELVAGENS</title>
 <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
-<h2>Quizzes Brasil</h2>
+<h2>REINO DS ENGRENAGENS SELVAGENS</h2>
 <h1>EmoQuizBrasil</h1>
 
 <p> <a href="equipe">Equipe</a></p>
