--- a/index.html
+++ b/index.html
@@ -1,80 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>REINO DAS ENGRENAGENS SELVAGENS</title>
-<link rel="stylesheet" href="style.css">
+    <title>Fatia doce</title>
+
+    <link rel="stylesheet" href="./style.css">
 </head>
-
-<body>
-    <header>
-<h2>REINO DS ENGRENAGENS SELVAGENS</h2>
-<h1>EmoQuizBrasil</h1>
-
-<p> <a href="equipe">Equipe</a></p>
-</header>
-
-
-    <!-- liverpool é o maior da inglaterra -->
-    
-    <img src="./aiaiai2.jpg" alt="shrek emo"
-    style="width: 30%;">
-</body>
-    <h3>Que tipo de emo você é descubra aqui</h3>
-    <h4>O que é um emo??</h4>
-    <p>Consideram-se pessoas altamente emotivas e sensíveis às letras das músicas de sua preferência, as quais têm como temática a melancolia, a tristeza, problemas que envolvem a temática do amor, da rejeição do outro (como da própria família).</p>
-</body>
-<section id="intro"> 
-    <div> <h2>Descubra Aqui</h2>
-        <p>Se voce é um emo triste, um emo solitario ou um emo shrek</p></div>
-   
-     
-    </section>
-
-</html>
-
-</body>
-
-<section class="equipe">
-</h2>
-
-<h2>Conheça nossa equipe:</h2>
-<div class="ft-integrantes">
-</div>
-
-<div>
-<section class="equipe">
-
-    <div class="Fotos">
-
-     <div>
-        <img class="ft-integrantes" src="./Aaron emo.jfif">
-       <h3>Aaron</h3>
-        <h3> Fundador </h3>
-    </div>
-
-    <div>
-        <img class="ft-integrantes" src="./João emo.jfif">
-        <h3> João</h3>
-        <h3> Fundador </h3>
-    </div>  
-
-    <div>
-        <img class="ft-integrantes" src="./Barbosa emo.jfif">
-        <h3> Barbosa</h3>
-        <h3> Fundador </h3>
-    </div>
-    </div>
-</section>
-
-
-</div>
-
-
-
-
-
-
-</body>
