--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fatia doce</title>
+    <title>Reino das Engrenagens Selvagens</title>
 
     <link rel="stylesheet" href="./style.css">
 </head>
+
+<body>
+    <header>
+    <!-- Gatiros são 10/10 -->
+    <h4 class="esp"> <a href="#saborhmmm">Equipe</a></h4>
+    <span></span>
+    <h4 class="esp"> <a href="#tabela">Cardápio</a></h4>
+     
+    </header>
