--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <header>
     <!-- Gatiros são 10/10 -->
+    <h1> Reino das Engrenagens Selvagens </h1>
     <h4 class="esp"> <a href="#saborhmmm">Equipe</a></h4>
     <span></span>
     <h4 class="esp"> <a href="#tabela">Cardápio</a></h4>
