--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     <header>
     <!-- Gatiros são 10/10 -->
     <h1> Reino das Engrenagens Selvagens </h1>
-    <h4 class="esp"> <a href="#saborhmmm">Equipe</a></h4>
-    <span></span>
-    <h4 class="esp"> <a href="#tabela">Cardápio</a></h4>
-     
-    </header>
+    <div class="red">
+        <h4 class="esp"> <a href="#saborhmmm">Equipe</a></h4>
+       <img src="cc06a02d005a3dee682b0ae9e0bda0d4-fotor-bg-remover-202405088387 1.png" alt="mao">
+        <h4 class="esp"> <a href="#tabela">Cardápio</a></h4>
+    </div>
+    </header> 
+
+    section
