--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
     <header>
     <!-- Gatiros são 10/10 -->
     <h1> Reino das Engrenagens Selvagens </h1>
+    <img src="4e4624ce55843faef7c267cee2807363-fotor-bg-remover-2024050883413 1 (1).png" alt="roda1">
+    <img src="4e4624ce55843faef7c267cee2807363-fotor-bg-remover-2024050883413 1 (1).png" alt="roda2">
     <div class="red">
-        <h4 class="esp"> <a href="#saborhmmm">Equipe</a></h4>
+        <h4 class="esp"> <a href="#EQUIPE">Equipe</a></h4>
        <img src="cc06a02d005a3dee682b0ae9e0bda0d4-fotor-bg-remover-202405088387 1.png" alt="mao">
-        <h4 class="esp"> <a href="#tabela">Cardápio</a></h4>
+        <h4 class="esp"> <a href="#SERVIÇOS">Cardápio</a></h4>
     </div>
     </header> 
 
-    section
+    <section class="intro">
+        <img src="nototr 1.png" alt="fotoprinc">
+    </section>
