--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,17 +11,62 @@
 
 <body>
     <header>
-    <!-- Gatiros são 10/10 -->
-    <h1> Reino das Engrenagens Selvagens </h1>
-    <img src="4e4624ce55843faef7c267cee2807363-fotor-bg-remover-2024050883413 1 (1).png" alt="roda1">
-    <img src="4e4624ce55843faef7c267cee2807363-fotor-bg-remover-2024050883413 1 (1).png" alt="roda2">
-    <div class="red">
-        <h4 class="esp"> <a href="#EQUIPE">Equipe</a></h4>
-       <img src="cc06a02d005a3dee682b0ae9e0bda0d4-fotor-bg-remover-202405088387 1.png" alt="mao">
-        <h4 class="esp"> <a href="#SERVIÇOS">Cardápio</a></h4>
-    </div>
-    </header> 
+        <!-- Gatiros são 10/10 -->
+        <h1> Reino das Engrenagens Selvagens </h1>
+        <img src="4e4624ce55843faef7c267cee2807363-fotor-bg-remover-2024050883413 1 (1).png" alt="roda1">
+        <img src="4e4624ce55843faef7c267cee2807363-fotor-bg-remover-2024050883413 1 (1).png" alt="roda2">
+        <div class="red">
+            <h4 class="esp"> <a href="#EQUIPE">Equipe</a></h4>
+            <img src="cc06a02d005a3dee682b0ae9e0bda0d4-fotor-bg-remover-202405088387 1.png" alt="mao">
+            <h4 class="esp"> <a href="#SERVIÇOS">Cardápio</a></h4>
+        </div>
+    </header>
 
-    <section class="intro">
-        <img src="nototr 1.png" alt="fotoprinc">
-    </section>
+
+        <section class="intro">
+            <img src="nototr 1.png" alt="fotoprinc">
+        </section>
+
+        <section>
+            <h3>SERVIÇOS E PREÇOS!</h3>
+            <H2>tRABALHO POR HORA</H2>
+            <H2>MÍNIMO R$70,00
+                CONCERTOS EM GERAL, NÃO HÁ CARRO QUE NÃO CONSEGUIMOS ARRUMAR!</H2>
+            <H2>NÓS FAZEMOS:</H2>
+            <H2>-MÊCANICA GERAL</H2>
+            <H4>(Revisões, reparos em motores, balanceamento, sistema elétrico, freios, suspensão e muito mais!)</H4>
+            <H2>-Linha direção</H2>
+            <h4>Aceleradores da direita e esquerda, painel de comandos</h4>
+
+        </section>
+        <section>
+            <img src="image 1.png" alt="pregos">
+        </section>
+
+        <section>
+            <h2>Equipe</h2>
+            <div>
+                <div class="joao">
+                    <img src="image 2.png" alt="joaofoto">
+                    <h3>João Pedro</h3>
+                </div>
+                <div class="aaron">
+                    <img src="image 3.png" alt="aaronfoto">
+                    <h3>Aaron</h3>
+                </div>
+                <div class="barbosa">
+                    <img src="image 3.png" alt="felipefoto">
+                    <h3>Felipe Babosa</h3>
+                </div>
+                <span></span>
+                <div class="senhor whoofles">
+                    <img src="image 4.png" alt="joaofoto">
+                    <h3>Senhor whoofles - o gerente</h3>
+                </div>
+                <span>
+                </span>
+            </div>
+        </section>
+
+</body>
+</html>
