--- a/index.html
+++ b/index.html
@@ -43,24 +43,24 @@
             <img src="image 1.png" alt="pregos">
         </section>
 
-        <section>
+        <section class="equipe">
             <h2>Equipe</h2>
-            <div>
+            <div class="Fotos">
                 <div class="joao">
-                    <img src="image 2.png" alt="joaofoto">
+                    <img class="Integrante" src="image 2.png" alt="joaofoto">
                     <h3>João Pedro</h3>
                 </div>
-                <div class="aaron">
-                    <img src="image 3.png" alt="aaronfoto">
+                <div  class="aaron">
+                    <img class="Integrante"  src="image 3.png" alt="aaronfoto">
                     <h3>Aaron</h3>
                 </div>
                 <div class="barbosa">
-                    <img src="image 3.png" alt="felipefoto">
+                    <img class="Integrante"  src="image 3.png" alt="felipefoto">
                     <h3>Felipe Babosa</h3>
                 </div>
                 <span></span>
                 <div class="senhor whoofles">
-                    <img src="image 4.png" alt="joaofoto">
+                    <img class="Integrante"  src="image 4.png" alt="joaofoto">
                     <h3>Senhor whoofles - o gerente</h3>
                 </div>
                 <span>
