--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h4>Aceleradores da direita e esquerda, painel de comandos</h4>
 
         </section>
-        <section>
+        <section  class="equipe">
             <img src="image 1.png" alt="pregos">
         </section>
 
