--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <img src="nototr 1.png" alt="fotoprinc">
         </section>
 
-        <section>
+        <section  class="equipe" >
             <h3>SERVIÇOS E PREÇOS!</h3>
             <H2>tRABALHO POR HORA</H2>
             <H2>MÍNIMO R$70,00
@@ -40,7 +40,7 @@
 
         </section>
         <section  class="equipe">
-            <img src="image 1.png" alt="pregos">
+            <img class="Integrante"  src="image 1.png" alt="pregos">
         </section>
 
         <section class="equipe">
