--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <img src="nototr 1.png" alt="fotoprinc">
         </section>
 
-        <section  class="equipe" >
+        <section  class="Fotos" >
             <h3>SERVIÇOS E PREÇOS!</h3>
             <H2>tRABALHO POR HORA</H2>
             <H2>MÍNIMO R$70,00
