--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
         </section>
 
         <section  class="texto" >
-            <h3>SERVIÇOS E PREÇOS!</h3>
-            <H2>tRABALHO POR HORA</H2>
-            <H2>MÍNIMO R$70,00
-                CONCERTOS EM GERAL, NÃO HÁ CARRO QUE NÃO CONSEGUIMOS ARRUMAR!</H2>
+            <h2 class="bra">SERVIÇOS E PREÇOS!</h2>
+            <H3 class="bra">tRABALHO POR HORA</H3>
+            <h3>MÍNIMO R$70,00
+                CONCERTOS EM GERAL, NÃO HÁ CARRO QUE NÃO CONSEGUIMOS ARRUMAR!</h3>
             <H2>NÓS FAZEMOS:</H2>
-            <H2>-MÊCANICA GERAL</H2>
+            <H2 class="bra">-MÊCANICA GERAL</H2>
             <H4>(Revisões, reparos em motores, balanceamento, sistema elétrico, freios, suspensão e muito mais!)</H4>
-            <H2>-Linha direção</H2>
+            <H2 class="bra">-Linha direção</H2>
             <h4>Aceleradores da direita e esquerda, painel de comandos</h4>
 
         </section>
