--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <img src="nototr 1.png" alt="fotoprinc">
         </section>
 
-        <section  class="texto" >
+        <section  class="textos" >
             <h2 class="bra">SERVIÇOS E PREÇOS!</h2>
             <H3 class="bra">tRABALHO POR HORA</H3>
             <h3>MÍNIMO R$70,00
