--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
         <section class="intro">
-            <img src="nototr 1.png" alt="fotoprinc">
+            <img class="tam" src="nototr 1.png" alt="fotoprinc">
         </section>
 
         <section  class="textos" >
