--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 
 <body>
     <header>
-        <!-- Gatiros são 10/10 -->
-        <h1> Reino das Engrenagens Selvagens </h1>
-        <img src="4e4624ce55843faef7c267cee2807363-fotor-bg-remover-2024050883413 1 (1).png" alt="roda1">
-        <img src="4e4624ce55843faef7c267cee2807363-fotor-bg-remover-2024050883413 1 (1).png" alt="roda2">
+        <div class="part">
+            <img src="4e4624ce55843faef7c267cee2807363-fotor-bg-remover-2024050883413 1 (1).png" alt="roda2">
+            <h1> Reino das Engrenagens Selvagens </h1>
+            <img src="4e4624ce55843faef7c267cee2807363-fotor-bg-remover-2024050883413 1 (1).png" alt="roda1">
+
+        </div>
         <div class="red">
             <h4 class="esp"> <a href="#EQUIPE">Equipe</a></h4>
             <img src="cc06a02d005a3dee682b0ae9e0bda0d4-fotor-bg-remover-202405088387 1.png" alt="mao">
